<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/exitButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/ic_exit"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exitButton"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleRecipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/update_recipe_name"
                android:textColor="#454545"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_bold"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleRecipeName"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="40dp"
                android:textColor="#454545"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_light"
                android:background="@drawable/bg_edit_text"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipeName"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/update_ingredients"
                android:textColor="#454545"
                android:textSize="18sp"
                android:drawablePadding="15dp"
                android:drawableEnd="@drawable/ic_add_ingredient"
                android:fontFamily="@font/gilroy_bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ingredientsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleIngredients"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredientsContainer"
                android:layout_marginTop="35dp"
                android:text="@string/update_instructions"
                android:textColor="#454545"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_bold"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:padding="10dp"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleInstructions"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:textColor="#454545"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_light"
                android:background="@drawable/bg_edit_text"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructions"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_url_link"
                android:drawablePadding="5dp"
                android:text="@string/add_link"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="#454545"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_bold"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleLink"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:textColor="#454545"
                android:textSize="18sp"
                android:fontFamily="@font/gilroy_light"
                android:background="@drawable/bg_edit_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="90dp"
        android:paddingVertical="10dp"
        android:text="@string/update"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#454545"
        android:fontFamily="@font/gilroy_bold"
        android:background="@drawable/bg_next_button" />

</androidx.constraintlayout.widget.ConstraintLayout>